syntax = "proto3";

package stats.service.dashboard;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.stats.recommendations";

import "stats/messages/request.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.messages.recommendations.UserPredictionsRequestProto)
      returns (stream stats.messages.recommendations.RecommendedEventProto);
  rpc GetSimilarEvents (stats.messages.recommendations.SimilarEventsRequestProto)
      returns (stream stats.messages.recommendations.RecommendedEventProto);
  rpc GetInteractionsCount (stats.messages.recommendations.InteractionsCountRequestProto)
      returns (stream stats.messages.recommendations.RecommendedEventProto);
}